--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -47,6 +47,11 @@
     top: 35px;
   }
 
+  #edit-button-portal-id {
+    width: 112px;
+    height: 30px;
+  }
+
   .bx--detail-page-header-title {
     display: inline-block;
     font-size: 1.75rem;
