Update PatternFly React Core

--- a/src-web/components/ApplicationCreationPage/components/style.scss
+++ b/src-web/components/ApplicationCreationPage/components/style.scss
@@ -11,7 +11,7 @@
 @import 'scss/variables';
 
 .creation-view-controls-labels {
-  padding: 0 0.3125rem 1.125rem 0;
+  padding: 0 0.3125rem 1.125rem 0 !important;
 
   .bx--form-item.bx--checkbox-wrapper:last-of-type {
     margin-bottom: 10px;
@@ -19,7 +19,13 @@
 }
 
 .clusterSelector-container {
+  font-size: 14px;
   position: relative;
+
+  .pf-c-check__label {
+    font-size: 14px;
+    font-weight: 700;
+  }
 
   // Show Time window config section only when expanded
   .bx--accordion__content {
@@ -73,7 +79,7 @@
   .add-label-btn {
     width: 190px;
     height: 40px;
-    padding: 13px;
+    padding: 5px;
     text-align: center;
     cursor: pointer;
   }
@@ -88,7 +94,7 @@
   }
 
   .add-label-btn-text {
-    font-weight: 600;
+    font-weight: 700;
     font-size: 14px;
     color: #06c;
   }
@@ -134,6 +140,7 @@
 }
 
 .timeWindow-container {
+  font-size: 14px;
   position: relative;
 
   // Active/Block mode btns
@@ -262,7 +269,7 @@
   .add-time-btn {
     width: 220px;
     height: 40px;
-    padding: 13px;
+    padding: 5px;
     text-align: center;
     cursor: pointer;
   }
