Add contributor copyright to other files

--- a/scss/structured-list.scss
+++ b/scss/structured-list.scss
@@ -5,7 +5,8 @@
  * US Government Users Restricted Rights - Use, duplication or disclosure 
  * restricted by GSA ADP Schedule Contract with IBM Corp.
  *******************************************************************************/
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
+// Copyright Contributors to the Open Cluster Management project
+ @import 'node_modules/carbon-components/scss/globals/scss/_colors';
 
 .structured-list-module {
   .bx--module__inner {
