--- a/src-web/components/Topology/scss/topology-icons.scss
+++ b/src-web/components/Topology/scss/topology-icons.scss
@@ -6,7 +6,9 @@
  * Use, duplication or disclosure restricted by GSA ADP Schedule
  * Contract with IBM Corp.
  ****************************************************************************** */
- @import 'node_modules/carbon-components/scss/globals/scss/_colors';
+// Copyright Contributors to the Open Cluster Management project 
+
+@import 'node_modules/carbon-components/scss/globals/scss/_colors';
 
 .node {
   .nodeIcon {
