--- a/src-web/components/Topology/scss/variables.scss
+++ b/src-web/components/Topology/scss/variables.scss
@@ -6,7 +6,7 @@
  * Use, duplication or disclosure restricted by GSA ADP Schedule
  * Contract with IBM Corp.
  ****************************************************************************** */
-
+// Copyright Contributors to the Open Cluster Management project 
 // animation
 $animation__ease-in: cubic-bezier(0.25, 0, 1, 1) !default;
 $animation__ease-out: cubic-bezier(0, 0, 0.25, 1) !default;
