--- a/scss/overview-filterview.scss
+++ b/scss/overview-filterview.scss
@@ -5,6 +5,7 @@
  * US Government Users Restricted Rights - Use, duplication or disclosure 
  * restricted by GSA ADP Schedule Contract with IBM Corp.
  *******************************************************************************/
+// Copyright Contributors to the Open Cluster Management project
 @import 'node_modules/carbon-components/scss/globals/scss/_colors';
 @import 'variables';
 
