--- a/scss/resource-list.scss
+++ b/scss/resource-list.scss
@@ -5,7 +5,7 @@
  * US Government Users Restricted Rights - Use, duplication or disclosure 
  * restricted by GSA ADP Schedule Contract with IBM Corp.
  *******************************************************************************/
-
+// Copyright Contributors to the Open Cluster Management project
 #resource-list {
   .bx--data-table-v2 th:nth-child(1),
   .bx--data-table-v2 td:nth-child(1) {
