--- a/src-web/components/Topology/scss/topology-link.scss
+++ b/src-web/components/Topology/scss/topology-link.scss
@@ -1,42 +1,43 @@
 /** *****************************************************************************
  * Licensed Materials - Property of IBM
- * (c) Copyright IBM Corporation 2018. All Rights Reserved.
+ * (c) Copyright IBM Corporation 2019. All Rights Reserved.
  *
  * Note to U.S. Government Users Restricted Rights:
  * Use, duplication or disclosure restricted by GSA ADP Schedule
  * Contract with IBM Corp.
  ****************************************************************************** */
- @import 'node_modules/carbon-components/scss/globals/scss/_colors';
+// Copyright Contributors to the Open Cluster Management project 
+// animation
+$animation__ease-in: cubic-bezier(0.25, 0, 1, 1) !default;
+$animation__ease-out: cubic-bezier(0, 0, 0.25, 1) !default;
+$animation__standard: cubic-bezier(0.5, 0, 0.1, 1) !default;
 
-$linkColor: rgb(140,155,165);
+// secondary header
+$secondary-header-top: 3.082rem !default;
+$secondary-header-min-height: 4.125rem !default;
+$secondary-header-max-height: 7.75rem !default;
 
-.link {
-  path {
-      fill: none;
-      stroke: $linkColor;
-      stroke-width: 1px;
-  }
-}
-
-.arrowDecorator {
-  stroke: none;
-  fill: $color__navy-gray-5;
-
-  &.faded {
-    opacity: 0.3;
-  }
-}
-
-.squareDecorator {
-  stroke: none;
-  fill: $linkColor;
-}
-
-.label {
-  text {
-      text-anchor: middle;
-      font-size: .6rem;
-      fill: $color__navy-gray-4;
-  }
-}
+// mcm overview cards
+$overview-column-width: 10px !default; /* card width must be multiple of this */
+// also change CARD_SPACING in constants.js
+$overview-card-margin-right: 20px !default; /* margin around cards */
+$overview-card-margin-bottom: 25px !default; /* margin around cards */
+$mcm__color__gray: #6f7878 !default;
+$mcm__color__critical: #e0182d !default;
+$mcm__available_color: #047cc0 !default;
+$mcm__used_color: #40d5bb !default;
+$mcm_color_green: #8cd211 !default;
+$mcm_color_gray: #8c9ba5 !default;
+$mcm_color_yellow: #efc199 !default;
+$mcm_color_red: #e71d32 !default;
+$mcm_heat_red: #ff4253 !default;
+$mcm_heat_yellow: #ffcb00 !default;
+$mcm_heat_blue: #92eeee !default;
+$mcm_view_filter: #dfebf1 !default;
+$mcm_background_color: #f4f7fb !default;
+$mcm_provider_card_background_color: #fafafa !default;
+$ibm-colors__gray--40: #a4a4a4 !default;
+$mcm_color_blue: #3f71ec !default;
+$mcm_color_blue_gray: #5a6872 !default;
+$mcm_color_gray_20: #152935 !default;
 
