Task/8489/use pf header (#966)
* using acmHeader - error with breadcrumb routing

* fix breadcrumb and added styling

* quick fix for content padding

* remove unused styling and fix spacing

* refresh action

* update ui-components package to pick up Refresh action

* update refresh and page styling

* update tab shadow styling

* fix refresh action showing on edit

* update types , refresh filter

* hide refresh action on create new app

* fix topology load spin on refresh

* add yaml toggler and fix header shadow

* fix header shadow test

* update delete modal position

* add Refresh action tests

* lint

* undo dynamic headerHeight

* fix header shadow

* undo auto css change

* fix test

* update cypress get header

* update cypress tests

* fix copyright

* fix copyright again

* fix cypress error

* scroll into view when searching

* scroll into view when searching for clusterlabels

* add missing scrollIntoView

* fix styling and attempt to fix cypress test

* add offset after scrolling name labels

* update offset

* fix temptifly container height

* update test

* scroll search bar into view

* fix search visibility on advanced tables

Co-authored-by: Valentina Birsan <vbirsan@vbirsan@redhat.com-mac>
Co-authored-by: Kevin Cormier <kcormier@redhat.com>
Co-authored-by: Valentina Birsan <vbirsan@redhat.com>

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -140,7 +140,7 @@ body {
 .page-content-container {
   display: flex;
   flex-direction: column;
-  padding: 1.5rem 5% 3.375rem;
+  padding: 1.5rem 24px 2rem;
 
   .bx--select--inline {
     svg.bx--select__arrow {
