--- a/src-web/components/Topology/scss/topology-diagram.scss
+++ b/src-web/components/Topology/scss/topology-diagram.scss
@@ -69,7 +69,7 @@
       bottom: 10px;
       position: relative;
       height: 40px;
-      width: 90%;
+      width: calc(100% - 20px);
     }
 
     .channelsCombo {
@@ -140,7 +140,7 @@
 
     .pageInput {
       align-items: center;
-      width: 30px;
+      width: 35px;
       height: 25px;
       left: 5px;
       right: 5px;
