--- a/src-web/components/Topology/scss/topology-diagram.scss
+++ b/src-web/components/Topology/scss/topology-diagram.scss
@@ -69,15 +69,31 @@
       bottom: 10px;
       position: relative;
       height: 40px;
-      width: 90%;
+      width: calc(100% - 20px);
     }
 
     .channelsCombo {
+      width: 100%;
       height: 40px;
       top: 35px;
       position: relative;
       font-weight: 400;
       font-size: 14px;
+
+      .pf-c-dropdown,
+      #comboChannel {
+        width: 100%;
+      }
+
+      .pf-c-dropdown__toggle-text {
+        white-space: normal;
+        text-align: left;
+        font-size: 14px;
+      }
+
+      .pf-c-dropdown__menu-item {
+        font-size: 14px;
+      }
     }
 
     .label {
@@ -124,7 +140,7 @@
 
     .pageInput {
       align-items: center;
-      width: 30px;
+      width: 35px;
       height: 25px;
       left: 5px;
       right: 5px;
