--- a/src-web/components/ApplicationCreationPage/components/style.scss
+++ b/src-web/components/ApplicationCreationPage/components/style.scss
@@ -11,7 +11,7 @@
 @import 'scss/variables';
 
 .creation-view-controls-labels {
-  padding: 0 0.3125rem 1.125rem 0;
+  padding: 0 0.3125rem 1.125rem 0 !important;
 
   .bx--form-item.bx--checkbox-wrapper:last-of-type {
     margin-bottom: 10px;
@@ -19,7 +19,14 @@
 }
 
 .clusterSelector-container {
+  font-size: 14px;
   position: relative;
+
+  .pf-c-check__label {
+    font-size: 14px;
+    font-weight: 700;
+    color: #152935;
+  }
 
   // Show Time window config section only when expanded
   .bx--accordion__content {
@@ -41,7 +48,7 @@
 
   // Cluster label checkbox
   .clusterSelector-checkbox {
-    font-weight: 600;
+    font-weight: 700;
   }
 
   // Cluster label description
@@ -73,7 +80,7 @@
   .add-label-btn {
     width: 190px;
     height: 40px;
-    padding: 13px;
+    padding: 5px;
     text-align: center;
     cursor: pointer;
   }
@@ -88,9 +95,9 @@
   }
 
   .add-label-btn-text {
-    font-weight: 600;
+    font-weight: 700;
     font-size: 14px;
-    color: #3d70b2;
+    color: #06c;
   }
 
   .remove-label-btn {
@@ -134,6 +141,7 @@
 }
 
 .timeWindow-container {
+  font-size: 14px;
   position: relative;
 
   // Active/Block mode btns
@@ -172,13 +180,28 @@
 
   // Time window config - Days of the week section
   .config-days-section {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+  }
+
+  .config-title-required {
+    font-weight: 400;
+    color: #c9190b;
+    display: inline;
+    margin-left: 0.25rem;
   }
 
   .config-title {
     font-weight: 600;
     font-size: 14px;
     margin-bottom: 10px;
+  }
+
+  .time-picker-title {
+    display: flex;
+
+    .config-title {
+      padding-right: 71px;
+    }
   }
 
   .config-descr {
@@ -202,7 +225,7 @@
 
   // Time window config - Timezone section
   .config-timezone-section {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 
   .config-timezone-combo-box {
@@ -229,19 +252,19 @@
     margin-bottom: 20px;
   }
 
-  .config-start-time {
+  .config-input-time {
     float: left;
+    margin-right: 10px;
   }
 
   .bx--label {
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 16px;
     margin-bottom: 10px;
   }
 
   .bx--time-picker__input-field {
     width: 140px;
-    margin-right: 10px;
     background-color: $acm_background_color;
   }
 
@@ -254,13 +277,13 @@
   .add-time-btn {
     width: 220px;
     height: 40px;
-    padding: 13px;
+    padding: 5px;
     text-align: center;
     cursor: pointer;
   }
 
   .btn-disabled {
-    cursor: not-allowed;
+    cursor: not-allowed !important;
   }
 
   .add-time-btn-icon {
@@ -271,7 +294,7 @@
   .add-time-btn-text {
     font-weight: 600;
     font-size: 14px;
-    color: #3d70b2;
+    color: #06c;
   }
 
   .remove-time-btn {
