--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -6,7 +6,7 @@
  * Use, duplication or disclosure restricted by GSA ADP Schedule
  * Contract with IBM Corp.
  ****************************************************************************** */
- // Copyright (c) 2020 Red Hat, Inc.
+// Copyright (c) 2020 Red Hat, Inc.
 // Copyright Contributors to the Open Cluster Management project
 @import 'node_modules/carbon-components/scss/globals/scss/_colors';
 @import 'variables';
@@ -38,7 +38,7 @@
     margin-left: 0.5rem;
   }
 
-  div[class*="makeStyles-timestamp"] > p {
+  p {
     font-size: var(--pf-global--FontSize--xs);
   }
 
