--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1,4 +1,3 @@
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
 /** *****************************************************************************
  * Licensed Materials - Property of IBM
  * (c) Copyright IBM Corporation 2018, 2019. All Rights Reserved.
@@ -9,32 +8,9 @@
 // Copyright (c) 2020 Red Hat, Inc.
 // Copyright Contributors to the Open Cluster Management project
 
+@import 'variables';
+
 .modal-with-editor {
-  .bx--modal-container {
-    padding: 0;
-    margin: 0;
-  }
-
-  .bx--modal-header {
-    padding: 1.25rem 3rem 1.25rem 3rem;
-    margin-bottom: 0;
-  }
-
-  .bx--modal-content {
-    overflow-y: visible;
-    margin-bottom: 0;
-  }
-
-  .bx--modal-content-desc {
-    display: flex;
-    flex-direction: row;
-    padding: 1.25rem 3rem 1.25rem 3rem;
-  }
-
-  .bx--modal-footer {
-    margin: 0;
-  }
-
   .yamlSampleTabsContainer {
     border-top: 1px solid $color__gray-1;
   }
@@ -109,20 +85,6 @@
 
 .hidden {
   display: none;
-}
-
-#modalFotterBtnDiv {
-  .bx--btn {
-    background-color: #4a79b7 !important;
-    color: white !important;
-    margin-left: 1rem;
-  }
-
-  .bx--btn--secondary {
-    background-color: transparent !important;
-    border: 2px solid #3d70b2;
-    color: #3d70b2 !important;
-  }
 }
 
 .remove-app-modal-content-text {
