--- a/src-web/components/Topology/scss/topology-icons.scss
+++ b/src-web/components/Topology/scss/topology-icons.scss
@@ -8,7 +8,7 @@
  ****************************************************************************** */
 // Copyright Contributors to the Open Cluster Management project 
 
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
+@import 'variables';
 
 .node {
   .nodeIcon {
