--- a/src-web/components/Topology/scss/topology-link.scss
+++ b/src-web/components/Topology/scss/topology-link.scss
@@ -7,7 +7,7 @@
  * Contract with IBM Corp.
  ****************************************************************************** */
 // Copyright Contributors to the Open Cluster Management project 
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
+@import 'variables';
 $linkColor: rgb(140, 155, 165);
 
 .link {
