--- a/src-web/components/Topology/scss/topology-node.scss
+++ b/src-web/components/Topology/scss/topology-node.scss
@@ -8,7 +8,7 @@
  ****************************************************************************** */
 // Copyright (c) 2020 Red Hat, Inc.
 // Copyright Contributors to the Open Cluster Management project
- @import 'node_modules/carbon-components/scss/globals/scss/_colors';
+ @import 'variables';
 
 .node {
   .shape {
