--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -50,36 +50,36 @@ spec:
 {{#case 'github'}}
 
 {{>templateGit 
-  channelName=../channelName 
-  channelNamespace=../channelNamespace 
-  channelNamespaceExists=../channelNamespaceExists 
-  githubURL=../githubURL 
-  githubUser=../githubUser 
-  githubAccessId=../githubAccessId 
-  githubBranch=../githubBranch 
-  githubPath=../githubPath
-  gitReconcileOption=../gitReconcileOption  
-  gitInsecureSkipVerify=../gitInsecureSkipVerify
-  ansibleSecretName=../ansibleSecretName
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  channelName=../../channelName
+  channelNamespace=../../channelNamespace
+  channelNamespaceExists=../../channelNamespaceExists
+  githubURL=../../githubURL
+  githubUser=../../githubUser
+  githubAccessId=../../githubAccessId
+  githubBranch=../../githubBranch
+  githubPath=../../githubPath
+  gitReconcileOption=../../gitReconcileOption
+  gitInsecureSkipVerify=../../gitInsecureSkipVerify
+  ansibleSecretName=../../ansibleSecretName
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePlacement 
-  timeWindow=../timeWindow
-  selectedRuleName=../selectedRuleName
-  existingrule-checkbox=../existingrule-checkbox
-  local-cluster-checkbox=../local-cluster-checkbox
-  clusterSelector=../clusterSelector
-  online-cluster-only-checkbox=../online-cluster-only-checkbox
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  timeWindow=../../timeWindow
+  selectedRuleName=../../selectedRuleName
+  existingrule-checkbox=../../existingrule-checkbox
+  local-cluster-checkbox=../../local-cluster-checkbox
+  clusterSelector=../../clusterSelector
+  online-cluster-only-checkbox=../../online-cluster-only-checkbox
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
-  ansibleSecretName=../ansibleSecretName
-  ansibleTowerHost=../ansibleTowerHost
-  ansibleTowerToken=../ansibleTowerToken  
+  ansibleSecretName=../../ansibleSecretName
+  ansibleTowerHost=../../ansibleTowerHost
+  ansibleTowerToken=../../ansibleTowerToken
 }}
 
 {{/case}}
@@ -93,37 +93,37 @@ spec:
 {{#case 'helmrepo'}}
 
 {{>templateHelm
-  channelName=../channelName 
-  channelNamespace=../channelNamespace 
-  channelNamespaceExists=../channelNamespaceExists   
-  helmURL=../helmURL
-  helmUser=../helmUser
-  helmPassword=../helmPassword
-  helmChartName=../helmChartName
-  helmPackageAlias=../helmPackageAlias
-  helmPackageVersion=../helmPackageVersion
-  helmInsecureSkipVerify=../helmInsecureSkipVerify
-  ansibleSecretName=../ansibleSecretName
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  channelName=../../channelName
+  channelNamespace=../../channelNamespace
+  channelNamespaceExists=../../channelNamespaceExists
+  helmURL=../../helmURL
+  helmUser=../../helmUser
+  helmPassword=../../helmPassword
+  helmChartName=../../helmChartName
+  helmPackageAlias=../../helmPackageAlias
+  helmPackageVersion=../../helmPackageVersion
+  helmInsecureSkipVerify=../../helmInsecureSkipVerify
+  ansibleSecretName=../../ansibleSecretName
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 
 {{>templatePlacement 
-  timeWindow=../timeWindow
-  selectedRuleName=../selectedRuleName
-  existingrule-checkbox=../existingrule-checkbox
-  local-cluster-checkbox=../local-cluster-checkbox
-  clusterSelector=../clusterSelector
-  online-cluster-only-checkbox=../online-cluster-only-checkbox
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  timeWindow=../../timeWindow
+  selectedRuleName=../../selectedRuleName
+  existingrule-checkbox=../../existingrule-checkbox
+  local-cluster-checkbox=../../local-cluster-checkbox
+  clusterSelector=../../clusterSelector
+  online-cluster-only-checkbox=../../online-cluster-only-checkbox
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
-  ansibleSecretName=../ansibleSecretName
-  ansibleTowerHost=../ansibleTowerHost
-  ansibleTowerToken=../ansibleTowerToken  
+  ansibleSecretName=../../ansibleSecretName
+  ansibleTowerHost=../../ansibleTowerHost
+  ansibleTowerToken=../../ansibleTowerToken
 }}
 
 {{/case}}
@@ -137,32 +137,32 @@ spec:
 {{#case 'objectstore'}}
 
 {{>templateObjectStore
-  channelName=../channelName 
-  channelNamespace=../channelNamespace
-  channelNamespaceExists=../channelNamespaceExists   
-  objectstoreURL=../objectstoreURL
-  accessKey=../accessKey
-  secretKey=../secretKey
-  ansibleSecretName=../ansibleSecretName
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  channelName=../../channelName
+  channelNamespace=../../channelNamespace
+  channelNamespaceExists=../../channelNamespaceExists
+  objectstoreURL=../../objectstoreURL
+  accessKey=../../accessKey
+  secretKey=../../secretKey
+  ansibleSecretName=../../ansibleSecretName
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePlacement 
-  timeWindow=../timeWindow
-  selectedRuleName=../selectedRuleName
-  existingrule-checkbox=../existingrule-checkbox
-  local-cluster-checkbox=../local-cluster-checkbox
-  clusterSelector=../clusterSelector
-  online-cluster-only-checkbox=../online-cluster-only-checkbox
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  timeWindow=../../timeWindow
+  selectedRuleName=../../selectedRuleName
+  existingrule-checkbox=../../existingrule-checkbox
+  local-cluster-checkbox=../../local-cluster-checkbox
+  clusterSelector=../../clusterSelector
+  online-cluster-only-checkbox=../../online-cluster-only-checkbox
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
-  ansibleSecretName=../ansibleSecretName
-  ansibleTowerHost=../ansibleTowerHost
-  ansibleTowerToken=../ansibleTowerToken  
+  ansibleSecretName=../../ansibleSecretName
+  ansibleTowerHost=../../ansibleTowerHost
+  ansibleTowerToken=../../ansibleTowerToken
 }}
 
 {{/case}}
@@ -175,29 +175,29 @@ spec:
 {{#case 'other'}}
 
 {{>templateOther
-  channelName=../channelName 
-  channelNamespace=../channelNamespace 
-  channelNamespaceExists=../channelNamespaceExists  
-  namespaceChannelName=../namespaceChannelName
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  channelName=../../channelName
+  channelNamespace=../../channelNamespace
+  channelNamespaceExists=../../channelNamespaceExists
+  namespaceChannelName=../../namespaceChannelName
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePlacement 
-  timeWindow=../timeWindow
-  selectedRuleName=../selectedRuleName
-  existingrule-checkbox=../existingrule-checkbox
-  local-cluster-checkbox=../local-cluster-checkbox
-  clusterSelector=../clusterSelector
-  online-cluster-only-checkbox=../online-cluster-only-checkbox
-  selfLinks=../selfLinks
-  uniqueGroupID=../uniqueGroupID
+  timeWindow=../../timeWindow
+  selectedRuleName=../../selectedRuleName
+  existingrule-checkbox=../../existingrule-checkbox
+  local-cluster-checkbox=../../local-cluster-checkbox
+  clusterSelector=../../clusterSelector
+  online-cluster-only-checkbox=../../online-cluster-only-checkbox
+  selfLinks=../../selfLinks
+  uniqueGroupID=../../uniqueGroupID
 }}
 
 {{>templatePrePostTasks 
-  ansibleSecretName=../ansibleSecretName
-  ansibleTowerHost=../ansibleTowerHost
-  ansibleTowerToken=../ansibleTowerToken  
+  ansibleSecretName=../../ansibleSecretName
+  ansibleTowerHost=../../ansibleTowerHost
+  ansibleTowerToken=../../ansibleTowerToken
 }}
 
 {{/case}}
