--- a/src-web/components/common/ResourceDetails/style.scss
+++ b/src-web/components/common/ResourceDetails/style.scss
@@ -12,7 +12,7 @@
 #ResourceDetails {
   .app-info-and-dashboard-links {
     position: fixed;
-    top: 6.3rem;
+    top: calc(5.1rem + var(--pf-c-page__main-section--PaddingTop));
     right: 12.75rem;
     z-index: 1001;
     background-color: $color__white;
