--- a/src-web/components/common/OverviewCards/style.scss
+++ b/src-web/components/common/OverviewCards/style.scss
@@ -6,8 +6,6 @@
  *******************************************************************************/
 // Copyright (c) 2020 Red Hat, Inc.
 // Copyright Contributors to the Open Cluster Management project
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
-@import 'scss/variables';
 
 .overview-cards-container {
   .loading-skeleton-text {
@@ -31,7 +29,7 @@
     width: 40px;
     height: 24px;
     border-radius: 12px;
-    padding: 6px 2px 6px 6px;
+    padding: 1px 2px 1px 6px;
     margin-right: 8px;
   }
 
@@ -60,6 +58,7 @@
     display: inline-block;
     font-size: 12px;
     margin-left: 4px;
+    padding-top: 2px;
     vertical-align: top;
   }
 
