--- a/src-web/components/ApplicationCreationPage/style.scss
+++ b/src-web/components/ApplicationCreationPage/style.scss
@@ -7,16 +7,14 @@
  *******************************************************************************/
 // Copyright (c) 2020 Red Hat, Inc.
 // Copyright Contributors to the Open Cluster Management project
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
 @import 'scss/variables';
 
 // On app create page
-.page-content-container {
+.pf-c-page__main-section {
   .temptifly {
-    margin: 10px 0 -9.125rem 0;
 
     &.showEditor {
-      margin: 10px 0 -3.125rem 0;
+      margin: -20px 0 -4.125rem 0;
     }
 
     .creation-view-split-container {
@@ -24,7 +22,7 @@
         height: calc(100vh - 175px);
 
         .creation-view-controls-container {
-          padding-top: 1.0rem;
+          padding-top: 0px;
           height: calc(100vh - 180px);
         }
       }
@@ -33,12 +31,11 @@
 }
 
 // On app edit page
-.secondary-header-wrapper.with-tabs.with-breadcrumbs ~ .page-content-container {
+.secondary-header-wrapper.with-tabs.with-breadcrumbs ~ .pf-c-page__main-section {
   .temptifly {
-    margin: 10px 0 -9.125rem 0;
 
     &.showEditor {
-      margin: 10px 0 -9.125rem 0;
+      margin: 0 0 -4.125rem 0;
     }
 
     .creation-view-split-container {
@@ -46,7 +43,7 @@
         height: calc(100vh - 208px);
 
         .creation-view-controls-container {
-          padding-top: 1.0rem;
+          padding-top: 0px;
           height: calc(100vh - 213px);
         }
       }
