--- a/src-web/components/Topology/scss/resource-filter-view.scss
+++ b/src-web/components/Topology/scss/resource-filter-view.scss
@@ -8,7 +8,7 @@
  ****************************************************************************** */
 // Copyright (c) 2020 Red Hat, Inc.
 // Copyright Contributors to the Open Cluster Management project
-@import 'node_modules/carbon-components/scss/globals/scss/_colors';
+
 @import 'variables';
 $filter_sidebar_width: 300px;
 $filter_sidebar_animation_duration: 100ms;
@@ -17,7 +17,7 @@ $filter_sidebar_animation_duration: 100ms;
 .resource-filter-button {
   display: flex;
   position: fixed;
-  top: 6.4rem;
+  top: calc(5.25rem + var(--pf-c-page__main-section--PaddingTop));
   right: 13.5rem;
   z-index: 1004;
 }
