Fix aria-label on body

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 {{!-- Copyright (c) 2020 Red Hat, Inc. --}}
 {{!-- Copyright Contributors to the Open Cluster Management project --}}
 
-<body aria-label={{title}}>
+<body aria-label="{{title}}">
     <div id="header">{{{header}}}</div>
     <div id="page">{{{content}}}</div>
     {{{body}}}
