--- a/scss/common.scss
+++ b/scss/common.scss
@@ -104,9 +104,9 @@ html {
 body {
   min-height: 100%;
   height: 100%;
-  text-rendering: geometricPrecision;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: unset;
+  -moz-osx-font-smoothing: unset;
   background-color: $acm-background-color;
 }
 
