--- a/scss/common.scss
+++ b/scss/common.scss
@@ -116,6 +116,11 @@ body {
   padding: 1.5rem 24px 2rem;
 }
 
+.pf-c-page__main {
+  overflow-x: visible;
+  overflow-y: visible;
+}
+
 .content-spinner {
   position: fixed;
   top: 50%;
