--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -15,6 +15,7 @@
   flex-direction: column;
   position: fixed;
   width: 100%;
+  border-bottom: 1px solid var(--pf-global--BorderColor--100);
 
   .pf-c-divider {
     z-index: 1;
