--- a/src-web/components/Topology/scss/topology-details.scss
+++ b/src-web/components/Topology/scss/topology-details.scss
@@ -287,6 +287,11 @@
     &:hover {
       text-decoration: underline;
     }
+
+    &.loadingLink {
+      pointer-events: none;
+      color: $color__navy-gray-6;
+    }
   }
 
   .open-out-icon {
@@ -328,5 +333,13 @@
     .details-view-scrollbar {
       visibility: visible;
     }
+  }
+}
+
+.errMsgAlert {
+  margin-top: 2rem;
+
+  .pf-c-alert {
+    box-shadow: 0 1px 7px 0 rgba(0, 0, 0, 0.10);
   }
 }
