remove old header

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,13 @@
 
 <!DOCTYPE html>
 <html lang="{{context.locale}}">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>{{title}}</title>
-    <link rel='stylesheet' href="{{filesH.css.path}}">
     <link rel='stylesheet' href="{{contextPath}}/{{manifest.main.css}}">
-    <link rel='icon' href="{{headerContextPath}}/graphics/RHACM-Favicon.svg">
+    <link rel='icon' href="{{contextPath}}/graphics/RHACM-Favicon.svg">
 </head>
 {{{body}}}
+
 </html>
