--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   position: fixed;
+  // comment position: fixed will give you a ui where menu bar working fine
   width: 100%;
   border-bottom: 1px solid var(--pf-global--BorderColor--100);
 
@@ -50,7 +51,6 @@
     top: 7.25rem;
     display: flex;
     z-index: 6001;
-    top: 7rem;
 
     .portal {
       padding-left: 1rem;
