UI improvements on subscribed applications

--- a/src-web/components/ApplicationCreationPage/templates/template.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/template.hbs
@@ -58,7 +58,11 @@ spec:
   githubAccessId=../../githubAccessId
   githubBranch=../../githubBranch
   githubPath=../../githubPath
+  gitDesiredCommit=../../gitDesiredCommit
+  gitTag=../../gitTag
   gitReconcileOption=../../gitReconcileOption
+  gitReconcileRate=../../gitReconcileRate
+  gitSubReconcileRate=../../gitSubReconcileRate
   gitInsecureSkipVerify=../../gitInsecureSkipVerify
   ansibleSecretName=../../ansibleSecretName
   selfLinks=../../selfLinks
@@ -103,6 +107,8 @@ spec:
   helmPackageAlias=../../helmPackageAlias
   helmPackageVersion=../../helmPackageVersion
   helmInsecureSkipVerify=../../helmInsecureSkipVerify
+  helmReconcileRate=../../helmReconcileRate
+  helmSubReconcileRate=../../helmSubReconcileRate
   ansibleSecretName=../../ansibleSecretName
   selfLinks=../../selfLinks
   uniqueGroupID=../../uniqueGroupID
