--- a/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateGit.hbs
@@ -16,6 +16,8 @@ metadata:
 apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
+  annotations:
+    apps.open-cluster-management.io/reconcile-rate: {{{gitReconcileRate}}}
   name: {{{channelName}}}
   namespace: {{{channelName}}}-ns
   {{#if selfLinks}}
@@ -50,7 +52,18 @@ metadata:
   annotations:
     apps.open-cluster-management.io/git-branch: {{{githubBranch}}}
     apps.open-cluster-management.io/git-path: {{{githubPath}}}
+    {{#if gitDesiredCommit}}
+    apps.open-cluster-management.io/git-desired-commit: {{{gitDesiredCommit}}}
+    {{/if}}
+    {{#if gitTag}}
+    apps.open-cluster-management.io/git-tag: {{{gitTag}}}
+    {{/if}}
+    {{#if gitReconcileOption}}
     apps.open-cluster-management.io/reconcile-option: {{{gitReconcileOption}}}
+    {{/if}}
+    {{#if gitSubReconcileRate}}
+    apps.open-cluster-management.io/reconcile-rate: off
+    {{/if}}
   labels:
     app: {{{@root.name}}}
   name: {{{@root.name}}}-subscription-{{uniqueGroupID}}
