Pull in header fix and adjust header heights

--- a/src-web/components/ApplicationCreationPage/style.scss
+++ b/src-web/components/ApplicationCreationPage/style.scss
@@ -35,7 +35,7 @@
   .temptifly {
 
     &.showEditor {
-      margin: 0 0 -4.125rem 0;
+      margin: -24px 0 -4.125rem 0;
     }
 
     .creation-view-split-container {
