--- a/scss/secondary-header.scss
+++ b/scss/secondary-header.scss
@@ -13,10 +13,12 @@
 .secondary-header {
   display: flex;
   flex-direction: column;
-  // position: fixed;
+  position: fixed;
   // comment position: fixed will give you a ui where menu bar working fine
   // although we should make it at a fixed position to stick the secondary header to the top
-  width: 100%;
+  top: calc(1rem + var(--pf-c-page__header--Height));
+  right : var(--pf-c-page__main-section--PaddingRight);
+  left :  calc(var(--pf-c-page__main-section--PaddingLeft) + var(--pf-c-page__sidebar--Width));
   border-bottom: 1px solid var(--pf-global--BorderColor--100);
 
   .pf-c-divider {
