--- a/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
+++ b/src-web/components/ApplicationCreationPage/templates/templateHelm.hbs
@@ -50,7 +50,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
   annotations:
-    {{#if gitSubReconcileRate}}
+    {{#if helmSubReconcileRate}}
     apps.open-cluster-management.io/reconcile-rate: off
     {{/if}}
   labels:
