--- a/src-web/components/ApplicationCreationPage/style.scss
+++ b/src-web/components/ApplicationCreationPage/style.scss
@@ -31,11 +31,11 @@
 }
 
 // On app edit page
-.secondary-header-wrapper.with-tabs.with-breadcrumbs ~ .pf-c-page__main-section, pf-c-page__sidebar {
+.secondary-header-wrapper.with-tabs.with-breadcrumbs ~ .pf-c-page__main-section {
   .temptifly {
 
     &.showEditor {
-      margin: -24px 0 -4.125rem 0;
+      margin: 0px 0 -4.125rem 0;
     }
 
     .creation-view-split-container {
