Update to the latest AcmHeader (#1075)
* remove old header

* integrate the common header

* remove comments

* update ui-component version

* update changes

* comment position

* use side bar width to set the sec header width

* update snapshot

* fix main header

* fix header size

* fix tests

* fix tests

* update snapshots

* fix subs icons and editor layout

* update the snapshots

Co-authored-by: Valentina Birsan <vbirsan@redhat.com>

--- a/scss/common.scss
+++ b/scss/common.scss
@@ -108,7 +108,12 @@ body {
   -webkit-font-smoothing: unset;
   -moz-osx-font-smoothing: unset;
   background-color: $acm-background-color;
+  #page {
+    height: 100%;
+  }
 }
+
+
 
 .page-content-container {
   display: flex;
@@ -117,8 +122,7 @@ body {
 }
 
 .pf-c-page__main {
-  overflow-x: visible;
-  overflow-y: visible;
+  display: inline;
 }
 
 .content-spinner {
